updated the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,5 @@ src/.sass-cache/*
 src/node_modules/*
 src/.ftppass
 src/tmp/*
-#assets/js/main.min.js
-#assets/css/
+assets/js/main.min.js
+assets/css/
